fixed routes layout bug, now above the fold layout and cart state work together fine

--- a/src/style/Home.module.css
+++ b/src/style/Home.module.css
@@ -1,11 +1,5 @@
 @import url("./variables.css");
 
-.aboveTheFold {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-
 .hero {
     flex: 1;
     background-color: black;
