--- a/src/style/main.css
+++ b/src/style/main.css
@@ -6,8 +6,6 @@ body {
 
 #root {
   min-height: 100vh;
-}
-
-body {
-  
+  display: flex;
+  flex-direction: column;
 }
